--- a/src/app/main/home/home.less
+++ b/src/app/main/home/home.less
@@ -110,11 +110,11 @@
         }
         .main__interval {
             height: auto;
-            img {
-                -moz-transform: none !important;
-                -webkit-transform: none !important;
-                transform: none !important;
-            }
+            // img {
+            //     -moz-transform: none !important;
+            //     -webkit-transform: none !important;
+            //     transform: none !important;
+            // }
         }
         &__offer__chapter {
             padding-top: 0;
